Actualización con cambios en estilos y algunos textos

--- a/index.html
+++ b/index.html
@@ -51,15 +51,15 @@
             </div>
       </footer>
 
-      <!-- Main explain -->
+      <!-- Main ejemplo de project -->
       <main class="main" id="main">
         <div class="col-md-12">
-          <div class="row g-0 border rounded overflow-hidden flex-md-row">
+          <div class="row g-0 overflow-hidden flex-md-row">
             <div class="col p-4 d-flex flex-column position-static">
               <strong class="d-inline-block mb-2 text-white-emphasis">UX Design</strong>
               <h3 class="mb-0">Website Redesign</h3>
               <div class="mb-1 text-body-white">Aug 2023</div>
-              <p class="mb-auto">The only think I could think to include was maybe a project, like if this website is my portfolio haha.</p>
+              <p class="mb-auto">The only think I could think to include for the main was maybe a project, like if this website is my portfolio haha.</p>
               <button class="btn btn-outline-secondary mt-3 btn-oscuro">Continue reading</button>
             </div>
             <div class="col-auto d-none d-lg-block">
